# imageprobe

./: .darglint  .gitignore  README.md  mypy.ini  pyproject.toml  tox.ini
.github/workflows/: main.yaml
imageprobe/: __init__.py  client.py  errors.py  parser.py  types.py
imageprobe/parsers/: __init__.py  gif.py  png.py
tests/: conftest.py  test_imageprobe.py  test_parser.py
tests/mocks/: mock_client.py
tests/parsers/: conftest.py  test_gif.py  test_png.py
