##
## Poetry
##

[tool.poetry]
name = "imageprobe"
version = "0.1.0"
description = "Asynchronous image probing library. Fetch only as much as you need!"
authors = ["Plato <platoo@outlook.it>"]
license = "MIT"
repository = "http://github.com/palt0/imageprobe"
# TODO: classifiers

[tool.poetry.dependencies]
python = "^3.7.4"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.6.0"
isort = "^5.6.4"
pytest = "^6.2.0"
mypy = "^0.790"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

##
## Linting tools
##

[tool.pylint.format]
max-line-length = "88"

[tool.pylint.messages_control]
disable=[
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
]

[tool.isort]
profile = "black"
