##
## Poetry
##

[tool.poetry]
name = "imageprobe"
version = "0.1.0"
description = "Asynchronous image probing library. Fetch only as much as you need!"
authors = ["Plato <platoo@outlook.it>"]
license = "MIT"
readme = "README.md"
repository = "http://github.com/palt0/imageprobe"
keywords = ["imagesize", "fastimage"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.7.4"
aiohttp = "^3.7.3"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.6.0"
isort = "^5.6.4"
pytest = "^6.2.0"
mypy = "^0.790"
pytest-asyncio = "^0.14.0"
darglint = "^1.5.8"
tox = "^3.20.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

##
## Linting tools
##

[tool.pylint.format]
max-line-length = "88"

[tool.pylint.messages_control]
disable=[
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
]

[tool.isort]
profile = "black"

##
## Tests
##

[tool.pytest.ini_options]
markers = [
    "remote: marks tests that need an active internet connection",
    "slow: disabled by default (use --full to enable them)",
]
